--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -6,7 +6,7 @@
 
 <aside id="singleitem_barcode_toolbar">
   <%= render :partial => "shared/barcode", :locals => { :object => @case } %>
-  <% if current_user -%>
+  <% if current_user? && current_version? -%>
   <%= link_to raw('<span class="icon icon-tocollage-large"></span>'), new_collage_path(:annotatable_type => 'Case', :annotatable_id => @case), :class => 'collage-this new-action tooltip', :title => "Collage This" %>
   <%= link_to raw('<span class="icon icon-add-large"></span>'), '#', "data-item_id" => @case.id, "data-type" => "case", :class => 'link-add tooltip requires_logged_in', :title => "Add to a Playlist" %>
   <%= link_to raw('<span class="icon icon-favorite-large"></span>'), '#', :class => "bookmark-action tooltip requires_logged_in", :title => "Bookmark #{@case.name}", "data-type" => "case", "data-itemid" => @case.id %>
@@ -17,7 +17,7 @@
   <div id="main_details">
     <h1 class="scale1-5"><%= @case.display_name %></h1>
   </div>
-  <% if current_user && (current_user.is_case_admin || current_user.cases.include?(@case)) %>
+  <% if current_user? && can_edit_this_case? and current_version? %>
   <div id="description" class="scale1-1">
     <%= link_to raw('<span class="icon icon-edit"></span>EDIT CASE INFORMATION<span class="icon icon-arrow"></span>'), edit_case_path(@case), :class => "edit-external scale0-8" %>
   </div>
@@ -31,10 +31,14 @@
   <a href="#" class="right_panel_close"></a>
   <h3 class="info">Case Information<span class="icon icon-panel"></span></h3>
   <div class="stats_panel">
-  <%= render :partial => "meta" %>
+  <%= render :partial => "cases/meta" %>
   </div>
   <h3>Author Stats</h3>
   <%= render :partial => "shared/author_stats", :locals => { :user => @case.owners.first } %>
+  <h3>Versions</h3>
+  <%= render :partial => 'shared/version_info', :locals => {:obj => @case }%>
+  <h3>Collages From This Case</h3>
+  <%= render :partial => 'shared/collage_info', :locals => {:obj => @case }%>
 </div>
 
 <div class="clear"></div>
