--- a/app/views/collages/show.html.erb
+++ b/app/views/collages/show.html.erb
@@ -9,13 +9,15 @@
 </div>
 
 <aside id="singleitem_barcode_toolbar">
-  <%= render :partial => "shared/barcode", :locals => { :object => @collage } %>
-  <a href="#" id="heatmap_toggle" title="Show Heatmap" class="link-heatmap tooltip<%= ' inactive' if @collage.annotations.inject(0) { |s, a| s + a.annotation_word_count } == 0 %>"><span class="icon icon-heatmap"></span></a>
-  <a href="<%= copy_collage_path(@collage) %>" class="tooltip link-copy requires_logged_in" id="copy-collage" title="Remix <%= @collage.name %>">
-    <span class="icon icon-remix-large"></span>
-  </a>
-  <%= link_to raw('<span class="icon icon-add-large"></span>'), '#', "data-item_id" => @collage.id, "data-type" => "collage", :class => 'link-add tooltip requires_logged_in', :title => "Add to a Playlist" %>
-  <%= link_to raw('<span class="icon icon-favorite-large"></span>'), '#', :class => "bookmark-action tooltip requires_logged_in", :title => "Bookmark #{@collage.name}", "data-type" => "collage", "data-itemid" => @collage.id %>
+  <% if current_version? %>
+    <%= render :partial => "shared/barcode", :locals => { :object => @collage } %>
+    <a href="#" id="heatmap_toggle" title="Show Heatmap" class="link-heatmap tooltip<%= ' inactive' if @collage.annotations.inject(0) { |s, a| s + a.annotation_word_count } == 0 %>"><span class="icon icon-heatmap"></span></a>
+    <a href="<%= copy_collage_path(@collage) %>" class="tooltip link-copy requires_logged_in" id="copy-collage" title="Remix <%= @collage.name %>">
+      <span class="icon icon-remix-large"></span>
+    </a>
+    <%= link_to raw('<span class="icon icon-add-large"></span>'), '#', "data-item_id" => @collage.id, "data-type" => "collage", :class => 'link-add tooltip requires_logged_in', :title => "Add to a Playlist" %>
+    <%= link_to raw('<span class="icon icon-favorite-large"></span>'), '#', :class => "bookmark-action tooltip requires_logged_in", :title => "Bookmark #{@collage.name}", "data-type" => "collage", "data-itemid" => @collage.id %>
+  <% end %>
 </aside>
 
 <div id="collage" class="singleitem" data-itemid="<%= @collage.id %>">
@@ -78,13 +80,15 @@
   <a href="#" class="right_panel_close"></a>
   <h3 class="info">Collage Information<span class="icon icon-panel"></span></h3>
   <div class="stats_panel">
-    <%= render :partial => 'meta' %>
+    <%= render :partial => 'collages/meta' %>
   </div>
   <h3>Author Stats</h3>
   <%= render :partial => "shared/author_stats", :locals => { :user => @collage.owners.first } %>
   <% if false -%>
   <h3>Related Collages</h3>
   <% end -%>
+  <h3>Versions</h3>
+    <%= render :partial => 'shared/version_info', :locals => {:obj => @collage }%>
 </div>
 <div id="edit_item" class="requires_edit right_panel">
   <a href="#" class="right_panel_close"></a>
