--- a/app/views/collages/_quickbar.html.erb
+++ b/app/views/collages/_quickbar.html.erb
@@ -28,7 +28,9 @@
     </div>
     <div id="quickbar_right">
       <a href="#" id="quickbar_tools">SHOW/HIDE</a>
+      <% if @collage.annotator_version == 1 -%>
       <a href="#" id="quickbar_edit_toggle" class="requires_edit"><span>EDIT TOGGLE</span></a>
+      <% end -%>
       <a href="#" class="icon icon-black-print" id="quickbar_print" title="Print <%= @collage.name %>"><span>Print</span></a>
       <%= link_to raw('<span class="icon icon-black-favorite"><span>Bookmark Collage</span></span>'), '#', :class => "bookmark-action requires_logged_in", :title => "Bookmark #{@collage.name}", "data-type" => "collage", "data-itemid" => @collage.id %>
       <a href="#" class="icon icon-black-font" id="quickbar_font" title="Change the size of the text"><span>Font Settings</span></a>
