--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@ var UTC_OFFSET = #{Time.zone.now.utc_offset * 1000};") %>
 
 <script type="text/javascript" src="//use.typekit.net/yxz4hqb.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+<style type="text/css" id="additional_styles"></style>
 
 </head>
 
@@ -57,19 +58,20 @@ var UTC_OFFSET = #{Time.zone.now.utc_offset * 1000};") %>
 <%= render :partial => "shared/font_selectors" %>
 
 <%= javascript_include_tag 'jquery.min.js' %>
+<% if RAILS_ENV == 'development' -%>
+<%= javascript_include_tag 'jquery-migrate.js' %>
+<% else -%>
+<%= javascript_include_tag 'jquery-migrate.min.js' %>
+<% end -%>
 <%= javascript_include_tag 'jquery-ui.min.js' %>
 <script src="//tinymce.cachefly.net/4.0/tinymce.min.js"></script>
-<%= javascript_include_tag 'fonts', 'jquery.selectbox-0.6.1.pack', 'jquery.rating.pack', 'modernizr.custom.86311',
-  'jquery.form', 'jquery.cookie', 'jquery.tabSlideOut.v1.3.js', 'moretag', 'spellchecker/plugin.js',
+<%= javascript_include_tag 'fonts', 'jquery.selectbox-0.6.1.pack', 'jquery.rating.pack',
+  'jquery.form', 'jquery.cookie', 'jquery.tabSlideOut.v1.3.js', 
   'jquery.rule.min', 'jquery.tipsy', 'jquery.hoverIntent', 'mustache', 'ui', 'jquery.address.min', RAILS_ENV == 'development' ? {} : { :cache => 'all' } %>
 
 <% [ @javascripts.blank? ? nil : @javascripts ].compact.flatten.each do |js| %>
   <%= javascript_include_tag js %>
 <% end -%>
-
-<!--[if IE]>
-<%#= javascript_include_tag 'excanvas.js' %>
-<![endif]--> 
 
 <% flash.delete(:error) %>
 <% flash.delete(:notice) %>
