--- a/app/views/layouts/print.html.erb
+++ b/app/views/layouts/print.html.erb
@@ -8,8 +8,10 @@
 
     <%= stylesheet_link_tag 'ui', 'icons', 'export', :media => "all" %>
     <%= stylesheet_link_tag 'print', :media => "print" %>
-	  <%= javascript_include_tag 'modernizr.custom.86311' %>
+    <%= javascript_include_tag 'modernizr.custom.77714' %>
     <script type="text/javascript" src="//use.typekit.net/yxz4hqb.js"></script>
+    <style type="text/css" id="additional_styles"></style>
+    <style type="text/css" id="highlight_styles"></style>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
   <body id="b<%= params[:controller] %>">
@@ -32,6 +34,13 @@
           <option value="yes" selected="selected">Yes</option>
           <option value="no">No</option>
         </select>
+        <div id="annotation_options">
+          <strong>PRINT ANNOTATIONS</strong>
+          <select id="printannotations">
+            <option value="yes">Yes</option>
+            <option value="no" selected="selected">No</option>
+          </select>
+        </div>
         <div id="highlight_options">
           <strong>PRINT HIGHLIGHTS</strong>
           <select id="printhighlights">
@@ -75,7 +84,15 @@
     </div>
 
     <%= javascript_include_tag 'jquery.min.js' %>
+    <% if RAILS_ENV == 'development' -%>
+    <%= javascript_include_tag 'jquery-migrate.js' %>
+    <% else -%>
+    <%= javascript_include_tag 'jquery-migrate.min.js' %>
+    <% end -%>
     <%= javascript_include_tag 'jquery-ui.min.js' %>
-    <%= javascript_include_tag 'fonts', 'jquery.selectbox-0.6.1.pack', 'export', 'jquery.rule.min', 'jquery.xcolor' %>
+    <%= javascript_include_tag 'fonts', 'jquery.selectbox-0.6.1.pack', 'jquery.rule.min', 'jquery.xcolor', 'export' %>
+    <% [ @javascripts.blank? ? nil : @javascripts ].compact.flatten.each do |js| %>
+    <%= javascript_include_tag js %>
+    <% end -%>
   </body>
 </html>
