--- a/app/views/shared/objects/_collage_print.html.erb
+++ b/app/views/shared/objects/_collage_print.html.erb
@@ -1,15 +1,23 @@
 <% if collage.present? -%>
 <div class="item_description scale0-9"><%= raw collage.description %></div>
-<div class="collage-content" id="collage<%= collage.id %>" data-id="<%= collage.id %>">
+<div class="collage-content" id="collage<%= collage.id %>" data-id="<%= collage.id %>" data-annotator_version="<%= collage.annotator_version %>">
+<div class="article">
+<% if collage.annotator_version == 1 -%>
 <% cache "collage-#{collage.id}-editable-content" do -%>
-<article>
 <%= raw collage.editable_content %>
-</article>
 <% end -%>
+<% else -%>
+<% cache "collage-#{collage.id}-editable-content-v2" do -%>
+<%= raw collage.editable_content_v2 %>
+<% end -%>
+<% end -%>
+</div>
 </div>
 <script type="text/javascript">
 var collage_data_<%= collage.id %> = <%= raw(params[:state] || collage.readable_state || "{}") %>;
 var annotations_<%= collage.id %> = <%= raw collage.annotations.inject({}) { |h, a| h["a#{a.id}"] =  a.to_json(:include => :layers); h }.to_json %>;
 var color_map_<%= collage.id %> = <%= raw collage.color_map.to_json %>;
+var layer_data_<%= collage.id %> = <%= raw collage.layer_data.to_json %>;
+var heatmap_<%= collage.id %> = <%= raw collage.heatmap.to_json %>;
 </script>
 <% end -%>
