--- a/public/stylesheets/export.css
+++ b/public/stylesheets/export.css
@@ -93,6 +93,7 @@ background: url(/images/asterisk.jpg) 2px 1px no-repeat; text-indent: 10px; widt
   width: 150px;
   font-weight: normal;
 }
+#print-options #annotation_options,
 #print-options #highlight_options,
 #print-options #heatmap_options {
   display: inline-block;
@@ -109,3 +110,6 @@ background: url(/images/asterisk.jpg) 2px 1px no-repeat; text-indent: 10px; widt
   font-size: 12px !important;
   margin-top: -20px;
 }
+.annotator-outer { display: none; }
+.layered-ellipsis { display: none; margin: 0px 2px; }
+.unlayered-ellipsis { display: none; margin: 0px 2px; }
