--- a/app/views/collages/export.html.erb
+++ b/app/views/collages/export.html.erb
@@ -1,19 +1,27 @@
-<div id="collage<%= @collage.id %>" class="collage-content singleitem" data-id="<%= @collage.id %>">
+<div id="collage<%= @collage.id %>" class="collage-content singleitem" data-id="<%= @collage.id %>" data-annotator_version="<%= @collage.annotator_version %>">
   <h1 id="singlecollage" class="scale1-5"><%= @collage.name %></h1>
   <div class="details">
     <p class="info scale0-8"><%= @collage.updated_at.strftime("%B %d, %Y") %> by <%= link_to(@collage.user.display, user_path(@collage.user)) %></p>
     <p class="item_description scale0-8"><%= Collage.format_content(@collage.description) %></p>
   </div>
   <div class="fontdetails"></div>
+	<div class="article">
+  <% if @collage.annotator_version == 1 -%>
 	<% cache("collage-#{@collage.id}-editable-content") do %>
-	<article>
-		<%= raw @collage.editable_content %>
-	</article>
+	<%= raw @collage.editable_content %>
 	<% end -%>
+  <% else -%>
+	<% cache("collage-#{@collage.id}-editable-content-v2") do %>
+	<%= raw @collage.editable_content_v2 %>
+	<% end -%>
+  <% end -%>
+	</div>
 </div>
 
 <script type="text/javascript">
 var collage_data_<%= @collage.id %> = <%= raw params[:state] || @collage.readable_state || {} %>;
 var annotations_<%= @collage.id %> = <%= raw @collage.annotations.inject({}) { |h, a| h["a#{a.id}"] =  a.to_json(:include => :layers); h }.to_json %>;
 var color_map_<%= @collage.id %> = <%= raw @collage.color_map.to_json %>;
+var layer_data_<%= @collage.id %> = <%= raw @collage.layer_data.to_json %>;
+var heatmap_<%= @collage.id %> = <%= raw @collage.heatmap.to_json %>;
 </script>
