--- a/app/views/shared/objects/_playlist_item.html.erb
+++ b/app/views/shared/objects/_playlist_item.html.erb
@@ -1,4 +1,4 @@
-<li class="dd-item playlist listitem level<%= recursive_level %> listitem<%= item.id %> <%= 'last' if last %>" id="playlist_item_<%= item.id %>" data-itemid="<%= item.id %>" data-user_id="<%= actual_object.present? ? actual_object.user_id : 'n/a' %>" data-nestable="<%= item.actual_object_type == "Playlist" %>">
+<li class="dd-item playlist listitem level<%= recursive_level %> listitem<%= item.id %> <%= 'last' if last %>" id="playlist_item_<%= item.id %>" data-itemid="<%= item.id %>" data-user_id="<%= actual_object.present? ? actual_object.user_id : 'n/a' %>" data-actual_object_id="<%= item.actual_object_id %>" data-nestable="false">
   <div class="wrapper <%= "missing_item" if actual_object.nil? %>">
   <div class="inner-wrapper dd-handle">
     <table><tr>
@@ -63,7 +63,8 @@
   </div>
     <% if recursive_level < 4 && item.actual_object_type == 'Playlist' && actual_object -%>
       <% if actual_object.playlist_items.any? -%>
-      <div class="dd" data-playlist_id="<%= actual_object.id %>"><ol class="dd-list">
+      <div class="dd">
+        <ol class="dd-list">
         <% actual_object.playlist_items.each_with_index do |nested_item, nested_index| -%>
           <%= render :partial => 'shared/objects/playlist_item',
             :locals => { :item => nested_item,
@@ -73,7 +74,8 @@
             :recursive_level => recursive_level + 1,
             :last => (nested_item == actual_object.playlist_items.last) } %>
         <% end -%>
-      </ol></div>
+        </ol>
+      </div>
       <% end -%>
     <% end -%>
  </li>
